--- a/style.css
+++ b/style.css
@@ -86,6 +86,9 @@ h1 {
     padding-bottom: 5%;
     width: 100%;
 }
+.fact {
+    margin: 0 10px;
+}
 .fact > img {
     border:2px solid #3882F6;
     border-radius: 10px;
@@ -95,6 +98,7 @@ h1 {
 }
 .fact > figcaption {
     max-width: 20ch;
+    margin: 0 auto;
 }
 h2 {
     color: #1F2937;
